--- a/stylesheets/animate.css
+++ b/stylesheets/animate.css
@@ -8,8 +8,8 @@ Copyright (c) 2015 Daniel Eden
 */
 
 .animated {
-  -webkit-animation-duration: 1.2s;
-  animation-duration: 1.2s;
+  -webkit-animation-duration: 2.3s;
+  animation-duration: 2.3s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -1289,8 +1289,8 @@ body.animated {
 @-webkit-keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 30px, 0);
+    transform: translate3d(0, 30px, 0);
   }
 
   100% {
@@ -1303,8 +1303,8 @@ body.animated {
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 30px, 0);
+    transform: translate3d(0, 30px, 0);
   }
 
   100% {
