--- a/portfolio.jade
+++ b/portfolio.jade
@@ -68,7 +68,7 @@ html
       .row
         .large-12.medium-12.small-12.columns
           h1.text-center.bold.up Разделы
-          hr.grey
+          hr
         .small-12.columns
           div(data-magellan-expedition="fixed")
             dl.sub-nav
@@ -105,8 +105,6 @@ html
                 img(src="images/gallery/livingRoom/l5.jpg" alt="")
               li
                 img(src="images/gallery/livingRoom/l6.jpg" alt="")
-              li
-                img(src="images/gallery/livingRoom/l7.jpg" alt="")
               li
                 img(src="images/gallery/livingRoom/l8.jpg" alt="")
               li
@@ -188,23 +186,47 @@ html
             .preloader
             ul.example-orbit(data-orbit)
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/cabinet/c1.jpg" alt="")
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/cabinet/c2.jpg" alt="")
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/cabinet/c3.jpg" alt="")
+              li
+                img(src="images/gallery/cabinet/c4.jpg" alt="")
+              li
+                img(src="images/gallery/cabinet/c5.jpg" alt="")
+              li
+                img(src="images/gallery/cabinet/c6.jpg" alt="")
+              li
+                img(src="images/gallery/cabinet/c7.jpg" alt="")
         .large-6.small-12.columns#6
           h2.text-left.bold(data-magellan-destination="6") Разное
           a(name="6")
           .slider.slideshow-wrapper
             .preloader
-            ul.example-orbit(data-orbit)
+            ul.example-orbit(data-orbit)ul.example-orbit(data-orbit)
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/misc/m0.jpg" alt="")
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/misc/m1.jpg" alt="")
               li
-                img(src="images/textile2.jpg" alt="")
+                img(src="images/gallery/misc/m2.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m3.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m4.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m5.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m6.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m7.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m8.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m9.jpg" alt="")
+              li
+                img(src="images/gallery/misc/m10.jpg" alt="")
         .large-12.small-12.columns#7
           h2.text-left.bold(data-magellan-destination="7") Эскизы
           a(name="7")
