Added images to portfolio

--- a/portfolio.jade
+++ b/portfolio.jade
@@ -204,7 +204,7 @@ html
           a(name="6")
           .slider.slideshow-wrapper
             .preloader
-            ul.example-orbit(data-orbit)ul.example-orbit(data-orbit)
+            ul.example-orbit(data-orbit)
               li
                 img(src="images/gallery/misc/m0.jpg" alt="")
               li
