--- a/scss/foundation/components/_orbit.scss
+++ b/scss/foundation/components/_orbit.scss
@@ -146,7 +146,7 @@ $orbit-timer-hide-for-small: true !default;
         -o-transform: translateZ(0);
         transform: translateZ(0);
 
-        img { display: block; object-fit: cover; height: auto; margin: 0 auto; max-width: none !important; max-height: none !important;}
+        img { display: block; height: 540px; margin: 0 auto;}
 
         > * {
           position: absolute;
